--- a/sass/09_primary/_posts-and-pages.scss
+++ b/sass/09_primary/_posts-and-pages.scss
@@ -239,7 +239,7 @@ blockquote,q {
 	margin:0;  
 	@include font-size(2);
 	//font-family: $heading_font;
-	padding: 0 10px 0 40px;
+	padding: 20px 10px 20px 40px;
 	border-radius: 3px;
 
 	&:before {
@@ -247,7 +247,7 @@ blockquote,q {
 		content: "\f10d";
 		@include font-size(2.2);
 		font-family: 'FontAwesome';
-		left: 20px;
+		left: 10px;
 		top: 20px;
 		color: $c3;	
 	}	
@@ -255,7 +255,6 @@ blockquote,q {
 	p {
 		margin-bottom: 0;
 		@include font-size(2);
-		padding: 20px;
 		color: $c3;
 		position: relative;
 	
