--- a/rtl.css
+++ b/rtl.css
@@ -1,3 +1,6 @@
+
+
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -859,14 +862,14 @@ a {
 
 .comment-navigation .nav-previous,
 .paging-navigation .nav-previous,
-.post-navigation .nav-previous {
+.post-navigation .nav-previous, .posts-navigation .nav-previous {
   float: right;
   width: 48%;
   margin: 1%; }
 
 .comment-navigation .nav-next,
 .paging-navigation .nav-next,
-.post-navigation .nav-next {
+.post-navigation .nav-next, .posts-navigation .nav-next {
   float: left;
   text-align: left;
   width: 47%;
@@ -1354,16 +1357,16 @@ object {
   .share-box ul li {
     border: 0;
     padding: 0;
-    margin: 0 0px 0px 8px;
+    margin: 0 0px 0px 10px;
     display: inline-block; }
     .share-box ul li a {
-      width: 30px;
-      height: 30px;
+      width: 35px;
+      height: 35px;
       color: #131313;
       display: inline-block;
       background-color: #131313;
       text-align: center;
-      line-height: 30px;
+      line-height: 35px;
       -webkit-transform: rotate(-45deg);
               transform: rotate(-45deg);
       color: #fff; }
@@ -1374,8 +1377,7 @@ object {
         -webkit-transform: rotate(45deg);
                 transform: rotate(45deg);
         font-size: 14px;
-        font-size: 1.4rem;
-        line-height: 2; }
+        font-size: 1.4rem; }
 
 .share-box {
   margin-bottom: 50px; }
@@ -2881,6 +2883,23 @@ blockquote, q {
       list-style: none; }
     .site-footer .footer-widgets .widget_rss ul li {
       background: none; }
+  .site-footer .scroll-to-top {
+    background: #1fce6d;
+    color: #fff;
+    bottom: 3%;
+    cursor: pointer;
+    position: fixed;
+    left: 20px;
+    z-index: 999;
+    text-align: center;
+    line-height: 40px;
+    width: 40px;
+    background-clip: padding-box;
+    
+    border-radius: 4px;
+    transition: background-color 0.3s linear; }
+  .site-footer .scroll-to-top:hover {
+    background: rgba(31, 206, 109, 0.8); }
 
 .site-info {
   background: rgba(255, 255, 255, 0.1); }
