--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ Theme URI: http://www.genexthemes.com/gympress/
 Author: V. Uma Rani
 Author URI: http://www.genexthemes.com/
 Description: GymPress is a Free Fitness WordPress theme perfect for Gym, Yoga, Fitness, health, wellness spa, massage center, weight loss, hospital, clinic,restaurants,cafe, physiotherapy, portfolio, photography and more business. However, due to its flexibility and easiness it can be used to create any types of sites. this Theme build in customizer it is very easy to use and user friendly.
-Version: 1.0.5  
+Version: 1.0.6  
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: gympress
-Tags: e-commerce, blog, custom-menu, custom-background, custom-header, custom-logo, featured-images, right-sidebar, sticky-post, threaded-comments, translation-ready, two-columns, one-column, footer-widgets, full-width-template, theme-options
+Tags: e-commerce, blog, custom-menu, custom-background, custom-header, custom-logo, featured-images, right-sidebar, sticky-post, threaded-comments, translation-ready, two-columns, one-column, footer-widgets, full-width-template,  theme-options
          
 GymPress WordPress Theme, Copyright (C) 2017, V. Uma Rani
 GymPress is distributed under the terms of the GNU GPL
@@ -1819,6 +1819,76 @@ blockquote, q {
       background: #131313; }
     .post .latest-content a.more-link .fa {
       display: none; }
+
+/* Gutenberg CSS style */
+#primary ul {
+  list-style-type: disc; }
+
+.wp-block-latest-posts.aligncenter {
+  margin-left: 3em; }
+
+.wp-block-verse {
+  color: #676767; }
+
+.wp-block-quote {
+  border-left: 4px solid black;
+  padding-left: 5px;
+  margin-top: 0px;
+  padding-top: 0px; }
+  .wp-block-quote p {
+    padding: 20px; }
+  .wp-block-quote:before {
+    content: "";
+    border: 0px; }
+  .wp-block-quote cite {
+    margin: 0px;
+    padding-left: 20px; }
+
+.wp-block-quote.is-large {
+  border: 0px;
+  color: #131313; }
+  .wp-block-quote.is-large cite {
+    text-align: right;
+    display: block;
+    color: #333;
+    font-style: italic;
+    padding-right: 20px; }
+
+.wp-block-pullquote {
+  border-top: 4px solid black;
+  border-bottom: 4px solid black;
+  padding: 0px;
+  padding-bottom: 10px;
+  margin: 0 auto;
+  border-left: none !important;
+  margin-bottom: 20px; }
+  .wp-block-pullquote p {
+    padding: 20px; }
+  .wp-block-pullquote:before {
+    content: "";
+    border: 0px; }
+
+.wp-block-pullquote.alignleft {
+  margin-right: 25px; }
+
+.wp-block-pullquote.alignright {
+  margin-left: 25px; }
+
+.wp-block-button a:hover {
+  padding: 11px 24px;
+  box-shadow: 3px 3px black;
+  -webkit-box-shadow: 3px 3px black; }
+
+.wp-block-cover-image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.wp-block-audio {
+  text-align: center; }
+
+.wp-block-button.aligncenter {
+  margin-bottom: 1.5em; }
 
 .home .site-content {
   padding-top: 0; }
